--- a/package.json
+++ b/package.json
@@ -9,13 +9,20 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "sqlite3": "^5.1.6",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "receiptio": "^2.1.2",
+    "sqlite3": "^5.1.6"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
   },
-  "keywords": ["news", "swipe", "cards", "express", "sqlite"],
+  "keywords": [
+    "news",
+    "swipe",
+    "cards",
+    "express",
+    "sqlite"
+  ],
   "author": "",
   "license": "MIT"
 }
